<resources>
    <string name="app_name">SQLiteDatabaseApp</string>
    <string name="enter_the_details">Enter the Details</string>
    <string name="name">Name</string>
    <string name="contact_no">Contact No</string>
    <string name="dob">DOB</string>
    <string name="view_data">VIEW DATA</string>
    <string name="insert_data">INSERT DATA</string>
    <string name="delete_data">DELETE DATA</string>
    <string name="update_data">UPDATE DATA</string>
</resources>